<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/triple_default_padding"
    android:paddingVertical="@dimen/double_default_padding">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/half_default_padding"
            android:text="Notifications categories"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="?attr/colorOnBackground"
                android:id="@+id/forToday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notificationsMenu_for_today"
                app:rippleColor="?attr/colorOnBackground"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="?attr/colorOnBackground"
                android:id="@+id/thisWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notificationsMenu_this_week"
                app:rippleColor="?attr/colorOnBackground"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="?attr/colorOnBackground"
                android:id="@+id/all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notificationsMenu_all"
                app:rippleColor="?attr/colorOnBackground"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="?attr/colorOnBackground"
                android:id="@+id/released"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notificationsMenu_released"
                app:rippleColor="?attr/colorOnBackground"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="?attr/colorOnBackground"
                android:id="@+id/answers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notificationsMenu_answers"
                app:rippleColor="?attr/colorOnBackground"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>